@@ -97,6 +97,32 @@ function webspark_content_callout_field_default_field_bases() {
     'type' => 'image',
   );
 
+  // Exported field_base: 'field_callout_media'
+  $field_bases['field_callout_media'] = array(
+    'active' => 1,
+    'cardinality' => 1,
+    'deleted' => 0,
+    'entity_types' => array(),
+    'field_name' => 'field_callout_media',
+    'foreign keys' => array(),
+    'indexes' => array(
+      'value' => array(
+        0 => 'value',
+      ),
+    ),
+    'locked' => 0,
+    'module' => 'list',
+    'settings' => array(
+      'allowed_values' => array(
+        'image' => 'Image',
+        'video' => 'Video',
+      ),
+      'allowed_values_function' => '',
+    ),
+    'translatable' => 0,
+    'type' => 'list_text',
+  );
+
   // Exported field_base: 'field_callout_video'
   $field_bases['field_callout_video'] = array(
     'active' => 1,
