@@ -121,7 +121,7 @@ function webspark_content_callout_strongarm() {
   $strongarm->disabled = FALSE; /* Edit this to true to make a default strongarm disabled initially */
   $strongarm->api_version = 1;
   $strongarm->name = 'node_preview_content_callout';
-  $strongarm->value = '1';
+  $strongarm->value = '0';
   $export['node_preview_content_callout'] = $strongarm;
 
   $strongarm = new stdClass();
@@ -136,17 +136,17 @@ function webspark_content_callout_strongarm() {
   $strongarm->api_version = 1;
   $strongarm->name = 'panelizer_defaults_node_content_callout';
   $strongarm->value = array(
-    'status' => 0,
+    'status' => FALSE,
     'view modes' => array(
       'page_manager' => array(
-        'status' => 0,
-        'default' => 0,
-        'choice' => 0,
+        'status' => FALSE,
+        'default' => FALSE,
+        'choice' => FALSE,
       ),
       'default' => array(
-        'status' => 0,
-        'default' => 0,
-        'choice' => 0,
+        'status' => FALSE,
+        'default' => FALSE,
+        'choice' => FALSE,
       ),
     ),
   );
