@@ -6,3 +6,7 @@ Webspark Extras 7.x-1.1-dev, 2014-11-21
 Webspark Extras 7.x-1.2-dev, 2015-1-27
 ------------------------------
 - Set new default settings on accordion settings form
+
+Webspark Extras 7.x-1.3-dev, 2015-2-13
+------------------------------
+- Added help text to panopoly video widget and media widget video upload fields.
